fixed overflow issues and finalised content block 8

--- a/css/styling.css
+++ b/css/styling.css
@@ -1,15 +1,17 @@
 * {
   margin: 0;
   padding: 0;
+  /* overflow-x: hidden; */
 }
 
 /*------------------ content block 2 ------------------------ */
 header {
   height: 80vh;
   padding-left: 1.5em;
+  padding-right: 1.5em;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 25em 5em 10em;
+  grid-template-rows: 25em 8em 7em;
   gap: 0.5em;
 }
 
@@ -23,7 +25,6 @@ header {
 .header-paragraph {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  padding-right: 1em;
   color: var(--font-color-colored-bg);
 }
 
@@ -49,8 +50,6 @@ header {
   width: 4em;
   justify-self: flex-end;
   align-self: last baseline;
-  margin-right: 1.5em;
-
   position: relative;
 }
 
@@ -161,9 +160,9 @@ header {
 
 /*------------------ content block 5 ------------------------ */
 
-.content-block-5-button {
+/* .content-block-5-button {
   width: 10em;
-}
+} */
 .content-block-5 {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -205,31 +204,33 @@ header {
 .content-block-6 {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 5em 10em 3em;
+  grid-template-rows: 6em 13em 3em;
   height: 50vh;
   padding-top: 3em;
-  padding-right: 1em;
+  padding-right: 1.5em;
   padding-left: 1.5em;
   color: var(--font-color-white-bg);
   background-color: var(--bg-color-2);
-  gap: 1em;
+  gap: 0.5em;
 }
 
 .content-block-6-title {
   grid-column: 1;
   grid-row: 1;
+  align-self: center;
 }
 
 .content-block-6-parapgraph {
   grid-column: 1;
   grid-row: 2;
+  align-self: center;
 }
 
 .content-block-6-anchor {
   grid-column: 1;
   grid-row: 3;
   width: fit-content;
-  align-self: last baseline;
+  align-self: center;
 
   &:hover {
     border-bottom: var(--anchor-hover-effect);
@@ -305,29 +306,85 @@ header {
   justify-self: center;
 }
 
-
-
 /*------------------ content block 8 ------------------------ */
 
-
 .content-block-8 {
-    background-color: var(--bg-color-5);
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(5, 10em), ;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+  background-color: var(--bg-color-5);
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr) 3em;
+  grid-template-rows: auto;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+
+  position: absolute;
 }
 
 .content-block-8-title {
-    padding-top: 1.5em;
-    color: var(--font-color-colored-bg);
+  grid-column: 1 / 1;
+  grid-row: 1;
+  align-self: last baseline;
 
+  color: var(--font-color-colored-bg);
 }
 
 .content-block-8-paragraph {
-    color: var(--font-color-colored-bg);
+  grid-column: 1 / 3;
+  grid-row: 2;
+  align-self: center;
 
-
+  color: var(--font-color-colored-bg);
 }
+
+.image-container {
+  grid-column: 1 / 3;
+  grid-row: 3;
+
+  align-self: center;
+}
+
+/* .content-image {
+
+} */
+
+.content-block-8-paragraph-2 {
+  grid-column: 1 / 3;
+  grid-row: 4;
+  align-self: first baseline;
+
+  color: var(--font-color-colored-bg);
+}
+
+.content-block-8-button {
+  grid-column: 1;
+  grid-row: 5;
+  align-self: first baseline;
+
+  height: 3.5em;
+  width: 17em;
+}
+
+.button-container {
+  grid-column: 2 /3;
+  grid-row: 6;
+  width: 10em;
+  height: 3em;
+  align-self: last baseline;
+
+/* voor positioneren scroll-button rechtsonder */
+  position: relative;
+  left: 1.5em;
+  justify-self: flex-end;
+  justify-content: space-evenly;
+
+/* voor tekst van button en image icon naast elkaar krijgen */
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover {
+    border-color: #fff;
+  }
+  
+}
+
